[package]
name = "tracing-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = {git = "https://github.com/tfreiberg-fastly/tracing", branch="impl-filter-for-envfilter"}
tracing-subscriber = {git = "https://github.com/tfreiberg-fastly/tracing", branch="impl-filter-for-envfilter", features = ["env-filter", "fmt"]}
